Add fork property in the start goal
Enabled by default - starts GlassFish in a separate JVM, with all required module opens and exports. Other goals work with the forked JVM if it was previously started in fork mode, or within the same JVM if GlassFish was started without fork.